; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/wined3d/extr_buffer.c_buffer_bind.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/wined3d/extr_buffer.c_buffer_bind.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wined3d_buffer = type { i32, i32 }
%struct.wined3d_context = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.wined3d_buffer*, %struct.wined3d_context*)* @buffer_bind to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @buffer_bind(%struct.wined3d_buffer* %0, %struct.wined3d_context* %1) #0 {
  %3 = alloca %struct.wined3d_buffer*, align 8
  %4 = alloca %struct.wined3d_context*, align 8
  store %struct.wined3d_buffer* %0, %struct.wined3d_buffer** %3, align 8
  store %struct.wined3d_context* %1, %struct.wined3d_context** %4, align 8
  %5 = load %struct.wined3d_context*, %struct.wined3d_context** %4, align 8
  %6 = load %struct.wined3d_buffer*, %struct.wined3d_buffer** %3, align 8
  %7 = getelementptr inbounds %struct.wined3d_buffer, %struct.wined3d_buffer* %6, i32 0, i32 1
  %8 = load i32, i32* %7, align 4
  %9 = load %struct.wined3d_buffer*, %struct.wined3d_buffer** %3, align 8
  %10 = getelementptr inbounds %struct.wined3d_buffer, %struct.wined3d_buffer* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @context_bind_bo(%struct.wined3d_context* %5, i32 %8, i32 %11)
  ret void
}

declare dso_local i32 @context_bind_bo(%struct.wined3d_context*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
